# MARCHHARE

./: .gitignore  FileOps.py  Graph.py  LICENSE  MathKit.py  Plotting.py  PyPI.md  README.md  Timing.py  Utils3.py  pyproject.toml  setup.cfg
VectorMath/: HomogXforms.py
src/marchhare/: data.py  debug.py  plot.py  utils.py
