# https://packaging.python.org/tutorials/packaging-projects/
[metadata]
# replace with your username:
name = marchhare
version = 0.0.1
author = James Watson
author_email = james.watson-2@colorado.edu
description = Big bag of Python tricks that I have added to and drawn from throughout my graduate studies.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jwatson-CO-edu/MARCHHARE
project_urls =
    Bug Tracker = https://github.com/jwatson-CO-edu/MARCHHARE/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src